[gd_scene load_steps=2 format=3 uid="uid://dy653kqkfahnq"]

[ext_resource type="Script" path="res://scenes/menus/pause/pause_menu.gd" id="1_r8c6s"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8c6s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.941176, 0.964706, 0.941176, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/Panel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PausedLabel" type="Label" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResumeButton" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "RESUME"

[node name="OptionsButton" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OPTIONS"

[node name="MainMenuQuitContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MainMenuButton" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MainMenuQuitContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MainMenuQuitContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "QUIT"

[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MainMenuQuitContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/Panel/MarginContainer/VBoxContainer/VBoxContainer/MainMenuQuitContainer/QuitButton" to="." method="_on_quit_button_pressed"]
